--- a/src/assets/base.less
+++ b/src/assets/base.less
@@ -9,6 +9,7 @@ body {
   width: 100%;
   position: relative;
   margin: 0;
+  background-color: #f7f7f7;
   line-height: 1.6;
   font-family: Avenir, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
