--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 html {
-    /* font-size: 18px; */
-    font-size: 20px;
+    font-size: 18px;
 }
 
 body {
@@ -109,11 +108,11 @@ form {
 }
 
 
-@media (max-width: 1200px) {
+/* @media (max-width: 1200px) {
     html {
         font-size: 18px;
     }
-}
+} */
 
 @media (max-width: 992px) {
     html {
