--- a/style.css
+++ b/style.css
@@ -66,26 +66,33 @@ form {
     border: none;
     padding: 0 24px;
     line-height: 0;
-    cursor: pointer;
     font-weight: bold;
-    background-color: rgba(0, 0, 0, 0);
 }
 
-.button.default {
+.button:not(:disabled) {
+    cursor: pointer;
+}
+
+.button:not(:disabled) {
     color: white;
     background-color: #293FE6;
 }
 
-.button.default:hover {
+.button:disabled {
+    color: rgba(0, 0, 0, 0.25);
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+.button:hover:not(:disabled) {
     background-color: rgba(41, 63, 230, 0.88);
 }
 
-.button.default:active {
+.button:active:not(:disabled) {
     outline: 1px solid rgb(41, 63, 230, 0.5);
     box-shadow: inset 0 0 0 2px #293FE6;
 }
 
-.button:focus {
+.button:focus:not(:disabled) {
     outline: 1px solid rgb(41, 63, 230, 0.5);
 }
 
@@ -97,12 +104,20 @@ form {
     padding: 0 16px;
     line-height: 16px;
     box-sizing: border-box;
+}
+
+.input:not(:disabled) {
     background-color: white;
     color: black;
     box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.33);
 }
 
-.input:focus {
+.input:disabled {
+    background-color: rgba(0, 0, 0, 0.20);
+    color: rgba(0, 0, 0, 0.20);
+}
+
+.input:focus:not(:disabled) {
     outline: 1px solid rgb(41, 63, 230, 0.5);
     box-shadow: inset 0 0 0 2px #293FE6;
 }
