--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300;400;500;700&display=swap');
+
 html {
     font-size: 18px;
 }
@@ -8,7 +10,7 @@ body {
     position: relative;
     margin: 0;
     background-color: #f0f0f0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Radio Canada', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
@@ -22,7 +24,7 @@ h4,
 h5,
 h6 {
     color: black;
-    opacity: 0.8;
+    opacity: 0.77;
     font-weight: 500;
     line-height: calc(1em + 0.5rem);
 }
@@ -52,76 +54,61 @@ p {
 }
 
 br {
-    line-height: 1rem;
+    line-height: 1em;
 }
 
-form {
-    line-height: 0;
+.input-field {
+    --max-height: calc(40px - 2px);
+    display: inline-block;
+    background-color: white;
+    position: relative !important;
 }
 
-.button {
-    height: 40px;
-    font-size: 16px;
-    border-radius: 8px;
-    border: none;
-    padding: 0 24px;
-    line-height: 0;
-    font-weight: bold;
-}
-
-.button:not(:disabled) {
-    cursor: pointer;
-}
-
-.button:not(:disabled) {
-    color: white;
-    background-color: #293FE6;
-}
-
-.button:disabled {
-    color: rgba(0, 0, 0, 0.25);
-    background-color: rgba(0, 0, 0, 0.25);
-}
-
-.button:hover:not(:disabled) {
-    background-color: rgba(41, 63, 230, 0.88);
-}
-
-.button:active:not(:disabled) {
-    outline: 1px solid rgb(41, 63, 230, 0.5);
-    box-shadow: inset 0 0 0 2px #293FE6;
-}
-
-.button:focus:not(:disabled) {
-    outline: 1px solid rgb(41, 63, 230, 0.5);
-}
-
-.input {
-    height: 40px;
-    font-size: 16px;
-    border-radius: 8px;
-    border: none;
-    padding: 0 16px;
-    line-height: 16px;
+.input-field>* {
+    vertical-align: middle;
+    display: inline-block;
+    margin: 0;
     box-sizing: border-box;
 }
 
-.input:not(:disabled) {
-    background-color: white;
-    color: black;
-    box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.33);
+.input-field>.embed {
+    height: var(--max-height);
+    display: inline-flex;
+    padding: 4px;
 }
 
-.input:disabled {
-    background-color: rgba(0, 0, 0, 0.20);
-    color: rgba(0, 0, 0, 0.20);
+.input-field>.embed>* {
+    max-height: 100%;
 }
 
-.input:focus:not(:disabled) {
-    outline: 1px solid rgb(41, 63, 230, 0.5);
-    box-shadow: inset 0 0 0 2px #293FE6;
+.input-field>.styler {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
+.input-field>input:not([type="checkbox"]):not([type="radio"]):not([type="file"]):not([type="submit"]):not([type="reset"]):not([type="button"]) {
+    height: var(--max-height);
+    padding: 0 0 0 16px;
+    font-size: 16px;
+    border: none;
+}
+
+.input-field>input:focus:not([type="checkbox"]):not([type="radio"]):not([type="file"]):not([type="submit"]):not([type="reset"]):not([type="button"]) {
+    outline: none;
+    border: none;
+    box-shadow: none;
+}
+
+.input-field>input:focus~.styler {
+    outline: 1px solid rgb(0, 0, 0, 0.5);
+    border: 1px solid black;
+}
 
 /* @media (max-width: 1200px) {
     html {
