--- a/style.css
+++ b/style.css
@@ -1,61 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@300;400;500&display=swap');
-
-html {
-    font-size: 18px;
+@font-face {
+    font-family: 'Avenir';
+    src: url('/fonts/Avenir.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body {
-    min-height: 100vh;
-    width: 100%;
-    position: relative;
     margin: 0;
-    background-color: #f0f0f0;
-    font-family: 'Radio Canada', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+    background-color: whitesmoke;
+    font-family: 'Avenir', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     --color-danger: #f04e4e;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    color: black;
-    opacity: 0.77;
-    font-weight: 500;
-    line-height: calc(1em + 0.5rem);
-}
-
-h1 {
-    font-size: 3em;
-}
-
-h2 {
-    font-size: 1.33333333rem;
-}
-
-h3 {
-    font-size: 1.16666667rem;
-}
-
-h4 {
-    font-size: 1rem;
-}
-
-p {
-    color: black;
-    opacity: 0.8;
-    font-size: 1rem;
-    line-height: calc(1em + 0.5rem);
-    font-weight: 400;
-}
-
-br {
-    line-height: 1em;
 }
 
 .input-field {
@@ -115,30 +69,25 @@ label {
     display: inline-block;
 }
 
-.input-field>input[type="submit"],
-.input-field>button,
-.input-field>input[type="reset"],
-.input-field>input[type="button"] {
-    height: var(--max-height);
-    padding: 0 16px;
-    font-size: 16px;
-    /* border: none; */
+
+html {
+    font-size: 20px;
 }
 
 /* @media (max-width: 1200px) {
     html {
-        font-size: 18px;
+        font-size: 20px;
     }
 } */
 
 @media (max-width: 992px) {
     html {
-        font-size: 16px;
+        font-size: 18px;
     }
 }
 
-/* @media (max-width: 768px) {
+@media (max-width: 768px) {
     html {
-        font-size: 14px;
+        font-size: 16px;
     }
-} */
+}
