--- a/style.css
+++ b/style.css
@@ -2,26 +2,28 @@ body {
     background-color: whitesmoke;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     --color-danger: #f04e4e;
-
+    
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 8px;
+    width: 100%;
     box-sizing: border-box;
+    padding: .5em;
 }
 
 html {
-    font-size: 20px;
+    font-size: 22px;
+    line-height: 1.5;
 }
 
 @media (max-width: 992px) {
     html {
-        font-size: 18px;
+        font-size: 20px;
     }
 }
-
+/* 
 @media (max-width: 768px) {
     html {
-        font-size: 16px;
+        font-size: 18px;
     }
-}
+} */
