--- a/style.css
+++ b/style.css
@@ -2,11 +2,12 @@ body {
     background-color: whitesmoke;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     --color-danger: #f04e4e;
-    
+
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    min-height: 100vh;
     box-sizing: border-box;
     padding: .5em;
 }
