--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: whitesmoke;
+    background-color: rgb(250, 250, 255);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     --color-danger: #f04e4e;
 
