--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
+@font-face {
+    font-family: 'Avenir';
+    src: url('/fonts/Avenir.woff') format('woff');
+}
+
 body {
     background-color: rgb(250, 250, 255);
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: Avenir, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     --color-danger: #f04e4e;
 
     display: flex;
